# AAD_LLM

./: .env.example  .gitignore  README.md  alembic.ini  llamea_config.pkl  pyproject.toml  requirements.txt
configs/: llms.toml  problems.toml
docs/: ARCHITECTURE.md  EXECUTION_FLOW.md  LLAMEA_ARCHITECTURE.md  MODEL_CONFIGURATION.md  SYSTEM_ARCHITECTURE.md
logs/: .gitkeep
migrations/: env.py
migrations/versions/: 16af70da7e5f_initial_schema.py  20260723_remove_run_id.py  3a7a275532b2_auto_migration.py  592c6d03a822_baseline.py  dfff691ff93a_add_llm_generation_time.py
notebooks/: 00_model_test.ipynb  01_llamea_bbob.ipynb  01_noise_analysis.ipynb  02_llamea_analysis.ipynb  02_llamea_evolution.ipynb  03_batch_llamea_experiment.ipynb  03_results_analysis.ipynb  03_results_dashboard.ipynb  04_results_dashboard.ipynb
scripts/: 00_install_llamacpp.sh  00_load_env.sh  01_download_model.sh  01_install_dependencies.sh  01_setup_env.sh  02_download_llm.sh  02_download_model.sh  02_serve_model.sh  03_run_experiment.sh  03_serve_llm.sh  03_serve_model.sh  03_slurm_submit.sh  04_slurm_submit.sh  check_health.py  cleanup_models.sh  db.sh  env.sh  llm_manage.sh  llm_server.sh  migrate.py  migrate.sh  setup_env.sh  slurm_submit.sh  stop_server.sh
server/: README.md
server/docs/: MODEL_CONFIGURATION.md
server/notebooks/: 01_interactive_workspace.ipynb  01_noise_analysis.ipynb  02_llamea_analysis.ipynb  03_results_dashboard.ipynb
server/scripts/: 00_install_llamacpp.sh  01_download_model.sh  02_serve_model.sh  03_run_experiment.sh  04_slurm_submit.sh
src/: __init__.py  main.py
src/aad_llm/: __init__.py  evaluator.py  main.py  noisy_bbob.py  prompts.py  runner.py
src/aad_llm/analysis/: __init__.py
src/aad_llm/core/: __init__.py  evaluator.py  runner.py
src/aad_llm/llm/: __init__.py  prompts.py  providers.py
src/aad_llm/llm_providers/: __init__.py  base.py  gemini.py  lmstudio.py
src/aad_llm/problems/: __init__.py  bbob.py
src/analysis/: __init__.py  results.py
src/core/: __init__.py  config.py  dispatcher.py  evaluator.py  executor.py  experiment_service.py  orchestrator.py  recovery.py  runner.py
src/core/checkpoint/: __init__.py  logger.py  manager.py
src/core/llamea/: __init__.py  evaluator.py  executor.py  prompts.py  session.py
src/core/problems/: __init__.py  bbob.py
src/core/schema/: __init__.py  experiment.py  iteration.py  metrics.py  problem.py
src/infra/llm/: __init__.py  client.py
src/infra/storage/: __init__.py  base.py  manager.py  run_context.py
src/infra/storage/checkpoint/: __init__.py  repository.py
src/infra/storage/code_store/: __init__.py  code.py
src/infra/storage/filesystem/: __init__.py  blob.py  code.py
src/infra/storage/sqlite/: __init__.py  connection.py  factory.py  mapper.py  repository.py  tables.py
src/llm/: __init__.py  providers.py
src/problems/: __init__.py  bbob.py
src/schema/: __init__.py  experiment.py
src/storage/: __init__.py  base.py  blob.py  factory.py  json_store.py  manager.py  mapper.py  repository.py  sqlite_store.py
src/storage/json/: __init__.py  store.py
src/storage/sqlite/: __init__.py  connection.py  models.py  repository.py  store.py
writing/proposal/: literature.bib  thesis.tex
writing/proposal/chapters/: 01_abstract.tex  02_introduction.tex  03_related_work.tex  04_current_state.tex  04_objectives.tex  05_methodology.tex  05_objectives.tex
writing/proposal/style/: titlepage.tex
writing/thesis/: literature.bib  thesis.tex
writing/thesis/chapters/: 01_abstract.tex  02_introduction.tex  03_background.tex  04_related_work.tex  06_methodology.tex  07_experiments.tex  08_discussion.tex
