[project]
name = "aad-llm"
version = "0.1.0"
description = "LLaMEA-driven evolution of black-box optimization algorithms for noisy BBOB functions"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "llamea>=0.1.0",
    "ioh>=0.3.14",
    "openai>=1.0.0",
    "func-timeout>=4.3.5",
    "numpy>=1.26.0",
    "python-dotenv>=1.2.2",
    "plotly>=6.8.0",
]

[project.scripts]
aad-llm = "main:main"

[project.optional-dependencies]
gemini = ["google-genai>=0.8.0"]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
extraPaths = ["src"]
