[project]
name = "aad-llm"
version = "0.1.0"
description = "LLaMEA-driven evolution of black-box optimization algorithms for noisy BBOB functions"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "llamea>=0.1.0",
    "ioh>=0.3.14",
    "openai>=1.0.0",
    "func-timeout>=4.3.5",
    "numpy>=1.26.0",
    "python-dotenv>=1.2.2",
    "plotly>=6.8.0",
    "sqlalchemy>=2.0.51",
    "alembic>=1.13.0",
    "huggingface-hub>=0.20.0",
    "llama-cpp-python[server]>=0.3.0",
]

[project.optional-dependencies]
gemini = ["google-genai>=0.8.0"]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "pandas>=2.2.0",
    "tqdm>=4.66.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "poethepoet>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]
extend-exclude = ["notebooks"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
extraPaths = ["src"]

[tool.uv]
# Fallback to PyPI for other platforms, use custom CUDA wheels on Linux
[[tool.uv.index]]
name = "llama-cpp-cuda"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

[tool.uv.sources]
llama-cpp-python = [
    { index = "llama-cpp-cuda", marker = "sys_platform == 'linux'" }
]

# ====================================================================================
# Poe tasks
# ====================================================================================

[tool.poe.tasks.test]
cmd = "pytest"
help = "TEST: Run the test suite. Usage: poe test"

[tool.poe.tasks.test-cov]
cmd = "pytest --cov=src --cov-report=term-missing --cov-report=html"
help = "TEST COV: Run tests with coverage reporting. Usage: poe test-cov"

[tool.poe.tasks.lint]
cmd = "ruff check ."
help = "LINT: Check for linting issues using ruff. Usage: poe lint"

[tool.poe.tasks.lint-fix]
cmd = "ruff check . --fix"
help = "LINT FIX: Automatically fix linting issues. Usage: poe lint-fix"

[tool.poe.tasks.format]
cmd = "ruff format ."
help = "FORMAT: Automatically format code using ruff. Usage: poe format"

[tool.poe.tasks.check]
sequence = ["lint", "format"]
ignore_fail = false
help = "CHECK: Run linting and formatting checks. Usage: poe check"




